// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TagsInput/> TagsInput snapshot snapshots Should render correctly 1`] = `
<div
  className="input-tag-container"
>
  <div
    className="input-tag"
  >
    <ul
      className="input-tag-list"
    >
      <li
        className="input-box"
      >
        <input
          className=""
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    className="px-0 text-error col-12"
  />
</div>
`;

exports[`<TagsInput/> TagsInput snapshot snapshots Should render readonly correctly 1`] = `
<div
  className="input-tag-container"
>
  <div
    className="input-tag"
  >
    <ul
      className="input-tag-list"
    >
      <li
        className="input-box"
      >
        <input
          className="read-only"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          readOnly={true}
          type="text"
          value=""
        />
      </li>
    </ul>
  </div>
  <div
    className="px-0 text-error col-12"
  />
</div>
`;
